tests/fixtures/invalid/pow_bool_list_list.py
# Cannot call pow() with Bool, List[int], List[int]
x = pow(True, [1, 2, 3], [1, 2, 3])
